# Kynetic

./: .gitignore  LICENSE  README.md
renderer/: LICENSE  README.md  pyproject.toml  requirements.txt
renderer/examples/: a_b_sq.json  distributive_property.json  pythagoras.json
renderer/renderer/: __init__.py  main.py  render.py  schema.py
